--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,8 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  text-align: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -42,8 +41,9 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  /* background-color: #1a1a1a; */
+  background-color: #1a1a1a;
   cursor: pointer;
+  color: white;
   transition: border-color 0.25s;
 }
 button:hover {
