--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,12 +42,13 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  /* background-color: red; */
   cursor: pointer;
   color: white;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #2d2dc7;
 }
 button:focus,
 button:focus-visible {
@@ -62,8 +63,4 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
 }
-
